--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
             <p style="text-align: center; margin-bottom: 2rem; color: var(--gray);">
                 Get your free consultation and learn how we can make your brand visible in ChatGPT and other AI search tools.
             </p>
-            <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/mwprqrlb" method="POST">
                 <div class="form-group">
                     <label for="name">Your Name *</label>
                     <input type="text" id="name" name="name" required>
